# RoleRocket-AI

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  main.py  pyproject.toml  requirements.txt  requirements_frontend.txt
.devcontainer/: devcontainer.json
career_research/: career_research_prompts_config.py  career_researcher_agent.py  fetch_user_profile.py  research_mcp_and_tools.py  research_pipeline.py  research_reports.py  save_research_results_json.py
config/: master_config.yaml
frontend_streamlit/: RoleRocket_frontend.py  requirements.txt
frontend_streamlit/helpers/: base_style.py  markdown_to_pdf.py  spinner.py
full_pipeline_files/: input_pipeline.py  presenter_pipeline.py  profile_improvement_pipeline.py  research_pipeline.py
memory/: userprofile.db
memory_saving/: memory_mcp_config.py  save_user_preferences_to_memory.py  save_user_resume_to_memory.py  user_intake_pipeline.py
outputs/: compatibility_scores.json  job_aggregation.json  presenter_output.md  profile_improvement_output.md  researched_jobs.md
present_to_user/: job_compatibility_scoring.py  job_presenter_agent.py  present_jobs_pipeline.py
profile_improvement_advisor/: improvement_agent_mcp.py  profile_improvement_agent.py  profile_improvement_pipeline.py
utils/: exception.py
